<resources>
    <string name="app_name">HipoLabsProject</string>
    <string name="add_member">Add Member</string>
    <string name="name">name</string>
    <string name="age">age</string>
    <string name="location">location</string>
    <string name="github">github</string>
    <string name="name_header">name_header</string>
    <string name="years_in_hipo">years_in_hipo</string>
    <string name="position">position</string>
    <string name="company">company</string>
    <string name="team">team</string>
</resources>